--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -12,6 +12,7 @@
     android:layout_marginEnd="20dp"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="20dp"
+    android:background="#43B27D"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,78 +25,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#43B27D"
+        >
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+
+        <ImageView
+            android:id="@+id/fotoPerfil"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/fotoperfil"
+            />
 
         <TextView
-            android:id="@+id/tituloActividad"
+            android:id="@+id/nombrePerfil"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:fontFamily="@font/blackwoff2"
-            android:text="NATURALEZA Y AVENTURA"
-            android:textColor="#154739"
+            android:text="@string/perfilNombre"
+            android:textColor="#144739"
             android:textAlignment="center"
-            android:textSize="25sp"
+            android:textSize="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
-            android:paddingTop="5dp"
+            android:paddingTop="3dp"
             android:background="#43B27D"
             />
 
-        <ImageView
-            android:id="@+id/fotoActividad"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:background="#0E322C"
-            />
-
         <TextView
-            android:id="@+id/descripcionActividad"
+            android:id="@+id/descripcionPerfil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
-            android:textColor="#F5E51D"
-            android:text="Encontramos desde charcos, cascadas, cuevas, valles y cerros para disfrutar"
+            android:textColor="#0E322C"
             android:textAlignment="center"
+            android:text="@string/perfil"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:paddingBottom="6dp"
+            android:paddingBottom="10dp"
             android:paddingRight="20dp"
             android:paddingLeft="20dp"
-            android:background="#0E322C"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/verMas"
-            android:textSize="15sp"
-            android:textAlignment="textEnd"
-            android:textColor="#154739"
-            android:fontFamily="@font/blackwoff2"
-            android:layout_toEndOf="@+id/descripcionActividad"
-            android:orientation="vertical"
-            android:paddingRight="30dp"
-            android:paddingTop="2dp"
-            android:paddingLeft="5dp"
-            android:paddingBottom="5dp"
             android:background="#43B27D"
             />
 
-
     </LinearLayout>
 
-
 </androidx.cardview.widget.CardView>
-
-
-
-
