--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -10,6 +10,11 @@
         android:title="@string/btn2"
         />
 
+    <item
+        android:id="@+id/btn3"
+        android:title="@string/btn3"
+        />
+
     back
 
 </menu>
